@@ -1,3 +1,13 @@
+2003-06-06  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b12
+
+	* Applied a varaiation on Joan McGalliard's fix for custom fields,
+	  which were broken if magic_quotes_gpc was enabled.
+
+	* Fixed issue where PostNuke-embedded Gallery administrators
+	  required admin rights over all of PostNuke. Now, admin
+	  permissions can be restricted just to the Gallery module. (Bug
+	  #590999)
+
 2003-06-05  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b11
 
 	* Try to detect where each program is located in backup_albums.php
